<resources>
    <string name="app_name">My Grocery  List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery Item</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="next">Next</string>
    <string name="sure_text">Are You Sure?</string>
    <string name="no">No</string>
    <string name="Yes">Yes</string>
</resources>
